Changed project name to edu.training instead of training.edu Addede second parameter to display photos with GL. Added Fugitivos Widget. Added service and process to say hello when another app requests it.

--- a/app/src/main/res/layout-sw600dp-land/activity_detalle_log_eliminacion.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_detalle_log_eliminacion.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:name="training.edu.fragment.LogEliminacion"
+        android:name="edu.training.fragment.LogEliminacion"
         tools:layout="@layout/fragment_list_log_eliminacion"/>
 
     <fragment
@@ -18,7 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:name="training.edu.fragment.DetalleLogEliminacion"
+        android:name="edu.training.fragment.DetalleLogEliminacion"
         tools:layout="@layout/fragment_detalle_log_de_eliminacion"/>
 
 </LinearLayout>
