--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -63,33 +63,53 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <EditText
-                android:id="@+id/txtDistorcionSup"
-                android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp">
+            <!--<LinearLayout
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                android:inputType="number"
-                android:gravity="center_horizontal"
-                android:ems="10"
-                android:hint="@string/distorcion_sup"
-                android:maxLength="10"
-                android:maxWidth="150dp"
-                android:maxHeight="150dp"/>
-            <EditText
-                android:id="@+id/txtDistorcionInf"
-                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:text="@string/distorcion_sup"/>-->
+                <EditText
+                    android:id="@+id/txtDistorcionSup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:gravity="center_horizontal"
+                    android:ems="10"
+                    android:hint="@string/distorcion_sup"
+                    android:maxLength="10"
+                    android:maxWidth="150dp"
+                    android:maxHeight="150dp"/>
+            <!--</LinearLayout>-->
+
+            <!--<LinearLayout
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                android:inputType="number"
-                android:gravity="center_horizontal"
-                android:ems="10"
-                android:hint="@string/distorcion_inf"
-                android:maxLength="10"
-                android:maxWidth="150dp"
-                android:maxHeight="150dp"/>
+                android:orientation="horizontal"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:text="@string/distorcion_inf"/>-->
+                <EditText
+                    android:id="@+id/txtDistorcionInf"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:gravity="center_horizontal"
+                    android:ems="10"
+                    android:hint="@string/distorcion_inf"
+                    android:maxLength="10"
+                    android:maxWidth="150dp"
+                    android:maxHeight="150dp"/>
+            <!--</LinearLayout>-->
         </LinearLayout>
 
         <CheckBox
